layouting, blm logic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,28 @@
     <string name="user">Wildan</string>
     <string name="balance">Your Balance in IDR</string>
     <string name="money">500.000</string>
-    <string name="give_tips">Give Tips</string>
-    <string name="outcome">Rp250.000</string>
-    <string name="total_tips">Total tips</string>
-    <string name="recently">Recently Tipped</string>
+    <string name="give_tip">Give Tip</string>
+    <string name="tip_value">Rp25.000</string>
+    <string name="total_tip">Total tip</string>
+    <string name="recently">Recently Transaction</string>
     <string name="to_user">Talitha</string>
     <string name="date">Sep 30, 2023</string>
     <string name="message">Thanks for the service</string>
+    <string name="full_name">Wildan Fatahillah Akbar</string>
+    <string name="card_number">4873 4983 4837 1234</string>
+    <string name="my_card">My Card</string>
+    <string name="tip">tip</string>
+    <string name="ts_system">-</string>
+    <string name="see_all">See all</string>
+    <string name="hint_search">Search user</string>
+    <string name="list_user">List User</string>
+    <string name="name">Name</string>
+    <string name="nominal">Nominal</string>
+    <string name="tv_tip_precentage">Select tip precentage:</string>
+    <string name="amazing">Amazing (20%)</string>
+    <string name="good">Good (15%)</string>
+    <string name="ok">OK (10%)</string>
+    <string name="round_up">Round up tip?</string>
+    <string name="total">Total:</string>
+    <string name="send">Send</string>
 </resources>
