add splash, login, register

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="name_full">Full Name</string>
     <string name="hint_search">Search</string>
     <string name="list_user">List User</string>
+    <string name="description">Kebut semalam gara-gara file ilang :)</string>
 </resources>
