--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="setting">Setting</string>
     <string name="notification">Notification</string>
     <string name="see_all">See all</string>
+    <string name="dalam_rupiah">Dalam rupiah</string>
 </resources>
